# fuel-ccp-specs

./: .gitreview  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  redirect.py  redirects
priorities/: initial-priorities.rst
specs/: adl_versioning_spec.rst  ansible_k8s_installer.rst  application-definition-framework.rst  ci-image-building.rst  ci_infrastructure.rst  container_build_arch.rst  docker-layers.rst  dsl_versioning_spec.rst  general-lma-spec.rst  introduce-monitoring.rst  kubernetes-monitoring.rst  logging-with-heka.rst  repositories-split.rst  template.rst
specs/initial/approved/: initial-template.rst
tests/: test_directories.py  test_titles.py
