[metadata]
name = nextgen-specs
summary = NextGen Project Development Specs
description-file =
    README.rst
author = NextGen
author-email = nextgen-all@mirantis.com
home-page = http://mirantis.jira.com/wiki/display/NG/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
